fix: message alignment issue

--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,10 @@ img {
 .split-right {
     flex: 1;
     background-color: #f5f5f5;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
 }
 
 .split-left img,
